--- a/logica_1/teste_login.html
+++ b/logica_1/teste_login.html
@@ -1,27 +1,12 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - lógica</title>
 </head>
 <body>
-    <script>
-        var loginCadastrado = "alura";
-        var senhaCadastrada = "alura123";
-
-        var maximoTentativas = 3
-        var tentativaAtual = 1
-    
-        while(tentativaAtual <= maximoTentativas) {
-            var loginInformado = prompt("Informe o nome de usuário:")
-            var senhaInformada = prompt("Informe sua senha:");
-            if(loginCadastrado == loginInformado && senhaCadastrada == senhaInformada) {
-                alert("Bem-vindo de volta " + loginCadastrado + "!");
-                tentativaAtual = maximoTentativas;
-            } else if(tentativaAtual == 3) {
-                alert("Acesso negado, tentativas esgotadas!");
-            } else {
-                alert("Login ou senha inválidos! tentativas restantes: " + (maximoTentativas - tentativaAtual));
-            }
-            tentativaAtual = tentativaAtual + 1
-        }
-
-    </script>
+    <script src="js/teste_login.js"></script>
 </body>
+</html>
