--- a/logica_1/media_idades.html
+++ b/logica_1/media_idades.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo com input</title>
+    <title>Calculando média de idades</title>
 </head>
 <body>
-    <input type="number" class="input-jogo">
-    <button class="btn-jogo">Adivinhe o número</button>
-
-    <script src="js/jogo_input.js"></script>
+    <script src="js/media_idades.js"></script>
 </body>
 </html>
