--- a/logica_1/receitas.html
+++ b/logica_1/receitas.html
@@ -1,38 +1,12 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-
     <meta charset="UTF-8">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ingredientes</title>
 </head>
-
 <body>
-
-    <script>
-
-        var ingredientes = [];
-        var quantidade = parseInt(prompt("Quantos ingredientes você quer adicionar?"));
-        var contador = 1;
-
-        while(contador <= quantidade) {
-
-            var novoIngrediente = prompt("informe o ingrediente " + contador);
-            var achou = false;
-
-            for(var posicao = 0; posicao < ingredientes.length; posicao++) {
-
-                if(ingredientes[posicao] == novoIngrediente) {
-
-                    achou = true;
-                    break;
-                }
-            }
-            if(achou === false) {
-
-                ingredientes.push(novoIngrediente);
-                contador++;
-            }
-        }
-        document.write(ingredientes);
-
-    </script>
-    
+    <script src="js/receitas.js"></script>
 </body>
+</html>
