--- a/logica_1/teste_numero.html
+++ b/logica_1/teste_numero.html
@@ -1,32 +1,12 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <script>
-        function pulaLinha() {
-            document.write("<br><hr>");
-        }
-        function escreva(frase) {
-            document.write("<strong>" + frase + "</strong>");
-            pulaLinha();
-        }
-        function sorteia(n) {
-            return Math.round(Math.random() * n);
-        }
-    </script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adivinhe o número</title>
 </head>
 <body>
-    <script>
-        //var numero = Math.round(Math.random() * 10);
-        //console.log(numero);
-        var numero = sorteia(10);
-       // console.log(numero);
-        var chute = parseInt(prompt("Tente adivinhar o número de 0 a 10"));
-
-        if(chute == numero) {
-            escreva("Parabéns, você acertou!");
-        } else {
-            escreva("Ops, você errou... O número era " + numero + "!");
-        }
-
-        escreva("Obrigado por jogar!");
-    </script>
+    <script src="js/teste_numero.js"></script>
 </body>
+</html>
